Meta 3/y.output
Terminals which are not used

   ARROW
   RESERVED


Grammar

    0 $accept: Program $end

    1 Program: CLASS IDENTIFIER LBRACE MemberList RBRACE

    2 MemberList: /* empty */
    3           | MemberList MethodDecl
    4           | MemberList FieldDecl
    5           | MemberList SEMICOLON

    6 MethodDecl: PUBLIC STATIC MethodHeader MethodBody

    7 FieldDecl: PUBLIC STATIC Type IDENTIFIER IdentifierList SEMICOLON
    8          | error SEMICOLON

    9 IdentifierList: /* empty */
   10               | IdentifierList COMMA IDENTIFIER

   11 Type: BOOL
   12     | INT
   13     | DOUBLE

   14 MethodHeader: Type IDENTIFIER LPAR RPAR
   15             | Type IDENTIFIER LPAR FormalParams RPAR
   16             | VOID IDENTIFIER LPAR RPAR
   17             | VOID IDENTIFIER LPAR FormalParams RPAR

   18 FormalParams: ParamList
   19             | STRING LSQ RSQ IDENTIFIER

   20 ParamList: Type IDENTIFIER
   21          | ParamList COMMA Type IDENTIFIER

   22 MethodBody: LBRACE StatementOrVarDecl RBRACE

   23 StatementOrVarDecl: /* empty */
   24                   | StatementOrVarDecl Statement
   25                   | StatementOrVarDecl VarDecl

   26 VarDecl: Type IDENTIFIER IdentifierList SEMICOLON

   27 Statement: LBRACE StatementList RBRACE
   28          | IF LPAR ExprOrAssign RPAR Statement
   29          | IF LPAR ExprOrAssign RPAR Statement ELSE Statement
   30          | WHILE LPAR ExprOrAssign RPAR Statement
   31          | RETURN SEMICOLON
   32          | RETURN ExprOrAssign SEMICOLON
   33          | SEMICOLON
   34          | MethodInvocation SEMICOLON
   35          | Assignment SEMICOLON
   36          | ParseArgs SEMICOLON
   37          | PRINT LPAR ExprOrAssign RPAR SEMICOLON
   38          | PRINT LPAR STRLIT RPAR SEMICOLON
   39          | IF LPAR error RPAR Statement
   40          | IF LPAR error RPAR Statement ELSE Statement
   41          | WHILE LPAR error RPAR Statement
   42          | error SEMICOLON

   43 StatementList: /* empty */
   44              | StatementList Statement

   45 ExprOrAssign: Expr
   46             | Assignment

   47 MethodInvocation: IDENTIFIER LPAR RPAR
   48                 | IDENTIFIER LPAR ArgList RPAR
   49                 | IDENTIFIER LPAR error RPAR

   50 ArgList: ExprOrAssign
   51        | ArgList COMMA ExprOrAssign

   52 Assignment: IDENTIFIER ASSIGN ExprOrAssign

   53 ParseArgs: PARSEINT LPAR IDENTIFIER LSQ ExprOrAssign RSQ RPAR
   54          | PARSEINT LPAR error RPAR

   55 Expr: Expr PLUS Expr
   56     | Expr MINUS Expr
   57     | Expr STAR Expr
   58     | Expr DIV Expr
   59     | Expr MOD Expr
   60     | Expr AND Expr
   61     | Expr OR Expr
   62     | Expr XOR Expr
   63     | Expr LSHIFT Expr
   64     | Expr RSHIFT Expr
   65     | Expr EQ Expr
   66     | Expr GE Expr
   67     | Expr GT Expr
   68     | Expr LE Expr
   69     | Expr LT Expr
   70     | Expr NE Expr
   71     | MINUS Expr
   72     | PLUS Expr
   73     | NOT Expr
   74     | LPAR ExprOrAssign RPAR
   75     | LPAR error RPAR
   76     | MethodInvocation
   77     | ParseArgs
   78     | IDENTIFIER
   79     | IDENTIFIER DOTLENGTH
   80     | NATURAL
   81     | DECIMAL
   82     | BOOLLIT


Terminals, with rules where they appear

$end (0) 0
error (256) 8 39 40 41 42 49 54 75
LPAR (258) 14 15 16 17 28 29 30 37 38 39 40 41 47 48 49 53 54 74 75
RPAR (259) 14 15 16 17 28 29 30 37 38 39 40 41 47 48 49 53 54 74 75
LBRACE (260) 1 22 27
RBRACE (261) 1 22 27
LSQ (262) 19 53
RSQ (263) 19 53
EQ (264) 65
ASSIGN (265) 52
GE (266) 66
GT (267) 67
LE (268) 68
LT (269) 69
NE (270) 70
NOT (271) 73
COMMA (272) 10 21 51
SEMICOLON (273) 5 7 8 26 31 32 33 34 35 36 37 38 42
STAR (274) 57
DIV (275) 58
PLUS (276) 55 72
MINUS (277) 56 71
MOD (278) 59
AND (279) 60
OR (280) 61
ARROW (281)
LSHIFT (282) 63
RSHIFT (283) 64
XOR (284) 62
INT (285) 12
DOUBLE (286) 13
STRING (287) 19
BOOL (288) 11
IF (289) 28 29 39 40
ELSE (290) 29 40
CLASS (291) 1
PUBLIC (292) 6 7
RETURN (293) 31 32
STATIC (294) 6 7
VOID (295) 16 17
WHILE (296) 30 41
RESERVED (297)
DOTLENGTH (298) 79
PRINT (299) 37 38
PARSEINT (300) 53 54
NATURAL (301) 80
DECIMAL (302) 81
IDENTIFIER (303) 1 7 10 14 15 16 17 19 20 21 26 47 48 49 52 53 78 79
STRLIT (304) 38
BOOLLIT (305) 82
LOWER_THAN_ELSE (306)
UNARY (307)


Nonterminals, with rules where they appear

$accept (53)
    on left: 0
Program (54)
    on left: 1, on right: 0
MemberList (55)
    on left: 2 3 4 5, on right: 1 3 4 5
MethodDecl (56)
    on left: 6, on right: 3
FieldDecl (57)
    on left: 7 8, on right: 4
IdentifierList (58)
    on left: 9 10, on right: 7 10 26
Type (59)
    on left: 11 12 13, on right: 7 14 15 20 21 26
MethodHeader (60)
    on left: 14 15 16 17, on right: 6
FormalParams (61)
    on left: 18 19, on right: 15 17
ParamList (62)
    on left: 20 21, on right: 18 21
MethodBody (63)
    on left: 22, on right: 6
StatementOrVarDecl (64)
    on left: 23 24 25, on right: 22 24 25
VarDecl (65)
    on left: 26, on right: 25
Statement (66)
    on left: 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42,
    on right: 24 28 29 30 39 40 41 44
StatementList (67)
    on left: 43 44, on right: 27 44
ExprOrAssign (68)
    on left: 45 46, on right: 28 29 30 32 37 50 51 52 53 74
MethodInvocation (69)
    on left: 47 48 49, on right: 34 76
ArgList (70)
    on left: 50 51, on right: 48 51
Assignment (71)
    on left: 52, on right: 35 46
ParseArgs (72)
    on left: 53 54, on right: 36 77
Expr (73)
    on left: 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72
    73 74 75 76 77 78 79 80 81 82, on right: 45 55 56 57 58 59 60 61
    62 63 64 65 66 67 68 69 70 71 72 73


state 0

    0 $accept: . Program $end
    1 Program: . CLASS IDENTIFIER LBRACE MemberList RBRACE

    CLASS  shift, and go to state 1

    Program  go to state 2


state 1

    1 Program: CLASS . IDENTIFIER LBRACE MemberList RBRACE

    IDENTIFIER  shift, and go to state 3


state 2

    0 $accept: Program . $end

    $end  shift, and go to state 4


state 3

    1 Program: CLASS IDENTIFIER . LBRACE MemberList RBRACE

    LBRACE  shift, and go to state 5


state 4

    0 $accept: Program $end .

    $default  accept


state 5

    1 Program: CLASS IDENTIFIER LBRACE . MemberList RBRACE
    2 MemberList: .
    3           | . MemberList MethodDecl
    4           | . MemberList FieldDecl
    5           | . MemberList SEMICOLON

    $default  reduce using rule 2 (MemberList)

    MemberList  go to state 6


state 6

    1 Program: CLASS IDENTIFIER LBRACE MemberList . RBRACE
    3 MemberList: MemberList . MethodDecl
    4           | MemberList . FieldDecl
    5           | MemberList . SEMICOLON
    6 MethodDecl: . PUBLIC STATIC MethodHeader MethodBody
    7 FieldDecl: . PUBLIC STATIC Type IDENTIFIER IdentifierList SEMICOLON
    8          | . error SEMICOLON

    error      shift, and go to state 7
    RBRACE     shift, and go to state 8
    SEMICOLON  shift, and go to state 9
    PUBLIC     shift, and go to state 10

    MethodDecl  go to state 11
    FieldDecl   go to state 12


state 7

    8 FieldDecl: error . SEMICOLON

    SEMICOLON  shift, and go to state 13


state 8

    1 Program: CLASS IDENTIFIER LBRACE MemberList RBRACE .

    $default  reduce using rule 1 (Program)


state 9

    5 MemberList: MemberList SEMICOLON .

    $default  reduce using rule 5 (MemberList)


state 10

    6 MethodDecl: PUBLIC . STATIC MethodHeader MethodBody
    7 FieldDecl: PUBLIC . STATIC Type IDENTIFIER IdentifierList SEMICOLON

    STATIC  shift, and go to state 14


state 11

    3 MemberList: MemberList MethodDecl .

    $default  reduce using rule 3 (MemberList)


state 12

    4 MemberList: MemberList FieldDecl .

    $default  reduce using rule 4 (MemberList)


state 13

    8 FieldDecl: error SEMICOLON .

    $default  reduce using rule 8 (FieldDecl)


state 14

    6 MethodDecl: PUBLIC STATIC . MethodHeader MethodBody
    7 FieldDecl: PUBLIC STATIC . Type IDENTIFIER IdentifierList SEMICOLON
   11 Type: . BOOL
   12     | . INT
   13     | . DOUBLE
   14 MethodHeader: . Type IDENTIFIER LPAR RPAR
   15             | . Type IDENTIFIER LPAR FormalParams RPAR
   16             | . VOID IDENTIFIER LPAR RPAR
   17             | . VOID IDENTIFIER LPAR FormalParams RPAR

    INT     shift, and go to state 15
    DOUBLE  shift, and go to state 16
    BOOL    shift, and go to state 17
    VOID    shift, and go to state 18

    Type          go to state 19
    MethodHeader  go to state 20


state 15

   12 Type: INT .

    $default  reduce using rule 12 (Type)


state 16

   13 Type: DOUBLE .

    $default  reduce using rule 13 (Type)


state 17

   11 Type: BOOL .

    $default  reduce using rule 11 (Type)


state 18

   16 MethodHeader: VOID . IDENTIFIER LPAR RPAR
   17             | VOID . IDENTIFIER LPAR FormalParams RPAR

    IDENTIFIER  shift, and go to state 21


state 19

    7 FieldDecl: PUBLIC STATIC Type . IDENTIFIER IdentifierList SEMICOLON
   14 MethodHeader: Type . IDENTIFIER LPAR RPAR
   15             | Type . IDENTIFIER LPAR FormalParams RPAR

    IDENTIFIER  shift, and go to state 22


state 20

    6 MethodDecl: PUBLIC STATIC MethodHeader . MethodBody
   22 MethodBody: . LBRACE StatementOrVarDecl RBRACE

    LBRACE  shift, and go to state 23

    MethodBody  go to state 24


state 21

   16 MethodHeader: VOID IDENTIFIER . LPAR RPAR
   17             | VOID IDENTIFIER . LPAR FormalParams RPAR

    LPAR  shift, and go to state 25


state 22

    7 FieldDecl: PUBLIC STATIC Type IDENTIFIER . IdentifierList SEMICOLON
    9 IdentifierList: .  [COMMA, SEMICOLON]
   10               | . IdentifierList COMMA IDENTIFIER
   14 MethodHeader: Type IDENTIFIER . LPAR RPAR
   15             | Type IDENTIFIER . LPAR FormalParams RPAR

    LPAR  shift, and go to state 26

    $default  reduce using rule 9 (IdentifierList)

    IdentifierList  go to state 27


state 23

   22 MethodBody: LBRACE . StatementOrVarDecl RBRACE
   23 StatementOrVarDecl: .
   24                   | . StatementOrVarDecl Statement
   25                   | . StatementOrVarDecl VarDecl

    $default  reduce using rule 23 (StatementOrVarDecl)

    StatementOrVarDecl  go to state 28


state 24

    6 MethodDecl: PUBLIC STATIC MethodHeader MethodBody .

    $default  reduce using rule 6 (MethodDecl)


state 25

   11 Type: . BOOL
   12     | . INT
   13     | . DOUBLE
   16 MethodHeader: VOID IDENTIFIER LPAR . RPAR
   17             | VOID IDENTIFIER LPAR . FormalParams RPAR
   18 FormalParams: . ParamList
   19             | . STRING LSQ RSQ IDENTIFIER
   20 ParamList: . Type IDENTIFIER
   21          | . ParamList COMMA Type IDENTIFIER

    RPAR    shift, and go to state 29
    INT     shift, and go to state 15
    DOUBLE  shift, and go to state 16
    STRING  shift, and go to state 30
    BOOL    shift, and go to state 17

    Type          go to state 31
    FormalParams  go to state 32
    ParamList     go to state 33


state 26

   11 Type: . BOOL
   12     | . INT
   13     | . DOUBLE
   14 MethodHeader: Type IDENTIFIER LPAR . RPAR
   15             | Type IDENTIFIER LPAR . FormalParams RPAR
   18 FormalParams: . ParamList
   19             | . STRING LSQ RSQ IDENTIFIER
   20 ParamList: . Type IDENTIFIER
   21          | . ParamList COMMA Type IDENTIFIER

    RPAR    shift, and go to state 34
    INT     shift, and go to state 15
    DOUBLE  shift, and go to state 16
    STRING  shift, and go to state 30
    BOOL    shift, and go to state 17

    Type          go to state 31
    FormalParams  go to state 35
    ParamList     go to state 33


state 27

    7 FieldDecl: PUBLIC STATIC Type IDENTIFIER IdentifierList . SEMICOLON
   10 IdentifierList: IdentifierList . COMMA IDENTIFIER

    COMMA      shift, and go to state 36
    SEMICOLON  shift, and go to state 37


state 28

   11 Type: . BOOL
   12     | . INT
   13     | . DOUBLE
   22 MethodBody: LBRACE StatementOrVarDecl . RBRACE
   24 StatementOrVarDecl: StatementOrVarDecl . Statement
   25                   | StatementOrVarDecl . VarDecl
   26 VarDecl: . Type IDENTIFIER IdentifierList SEMICOLON
   27 Statement: . LBRACE StatementList RBRACE
   28          | . IF LPAR ExprOrAssign RPAR Statement
   29          | . IF LPAR ExprOrAssign RPAR Statement ELSE Statement
   30          | . WHILE LPAR ExprOrAssign RPAR Statement
   31          | . RETURN SEMICOLON
   32          | . RETURN ExprOrAssign SEMICOLON
   33          | . SEMICOLON
   34          | . MethodInvocation SEMICOLON
   35          | . Assignment SEMICOLON
   36          | . ParseArgs SEMICOLON
   37          | . PRINT LPAR ExprOrAssign RPAR SEMICOLON
   38          | . PRINT LPAR STRLIT RPAR SEMICOLON
   39          | . IF LPAR error RPAR Statement
   40          | . IF LPAR error RPAR Statement ELSE Statement
   41          | . WHILE LPAR error RPAR Statement
   42          | . error SEMICOLON
   47 MethodInvocation: . IDENTIFIER LPAR RPAR
   48                 | . IDENTIFIER LPAR ArgList RPAR
   49                 | . IDENTIFIER LPAR error RPAR
   52 Assignment: . IDENTIFIER ASSIGN ExprOrAssign
   53 ParseArgs: . PARSEINT LPAR IDENTIFIER LSQ ExprOrAssign RSQ RPAR
   54          | . PARSEINT LPAR error RPAR

    error       shift, and go to state 38
    LBRACE      shift, and go to state 39
    RBRACE      shift, and go to state 40
    SEMICOLON   shift, and go to state 41
    INT         shift, and go to state 15
    DOUBLE      shift, and go to state 16
    BOOL        shift, and go to state 17
    IF          shift, and go to state 42
    RETURN      shift, and go to state 43
    WHILE       shift, and go to state 44
    PRINT       shift, and go to state 45
    PARSEINT    shift, and go to state 46
    IDENTIFIER  shift, and go to state 47

    Type              go to state 48
    VarDecl           go to state 49
    Statement         go to state 50
    MethodInvocation  go to state 51
    Assignment        go to state 52
    ParseArgs         go to state 53


state 29

   16 MethodHeader: VOID IDENTIFIER LPAR RPAR .

    $default  reduce using rule 16 (MethodHeader)


state 30

   19 FormalParams: STRING . LSQ RSQ IDENTIFIER

    LSQ  shift, and go to state 54


state 31

   20 ParamList: Type . IDENTIFIER

    IDENTIFIER  shift, and go to state 55


state 32

   17 MethodHeader: VOID IDENTIFIER LPAR FormalParams . RPAR

    RPAR  shift, and go to state 56


state 33

   18 FormalParams: ParamList .  [RPAR]
   21 ParamList: ParamList . COMMA Type IDENTIFIER

    COMMA  shift, and go to state 57

    $default  reduce using rule 18 (FormalParams)


state 34

   14 MethodHeader: Type IDENTIFIER LPAR RPAR .

    $default  reduce using rule 14 (MethodHeader)


state 35

   15 MethodHeader: Type IDENTIFIER LPAR FormalParams . RPAR

    RPAR  shift, and go to state 58


state 36

   10 IdentifierList: IdentifierList COMMA . IDENTIFIER

    IDENTIFIER  shift, and go to state 59


state 37

    7 FieldDecl: PUBLIC STATIC Type IDENTIFIER IdentifierList SEMICOLON .

    $default  reduce using rule 7 (FieldDecl)


state 38

   42 Statement: error . SEMICOLON

    SEMICOLON  shift, and go to state 60


state 39

   27 Statement: LBRACE . StatementList RBRACE
   43 StatementList: .
   44              | . StatementList Statement

    $default  reduce using rule 43 (StatementList)

    StatementList  go to state 61


state 40

   22 MethodBody: LBRACE StatementOrVarDecl RBRACE .

    $default  reduce using rule 22 (MethodBody)


state 41

   33 Statement: SEMICOLON .

    $default  reduce using rule 33 (Statement)


state 42
